fix: use 'flex' on photos class so that they shrink and grow properly with window, and work with flex-flow/flex-wrap on gallery class

--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,8 @@ header{
     margin-bottom: 150px;
     
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -92,13 +92,16 @@ header{
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items:center;
-    flex-wrap: wrap;
+    flex: 1 1 300px; /*makes sure the items grow and shrink with the window (this prevents flex wrap in gallery from turning into a column when window is maximised)*/
 }
 .gallery{
     display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
     align-items: center;
+    
+    
     width: 100%;
     padding-bottom: 100px;
 }
